# lcl-reachability

./: lcl_reachability.opam
src/ast/: dune
src/laminar-analysis/: laminar.ml  laminar.mli
src/lcl-reachability/: closure.ml  closure_algorithm2.ml  dune  graph_types.ml  new_closure.ml  stack_utils.ml  three_stack_reachability.ml  utils.ml
test/: dune  generate_tests.ml  test.ml  test_reachability.ml
test/sandbox/: dune  sandbox.ml
test/test_lib/: dune  generate_tests.ml  generate_tests_three_stack.ml
test/unit_tests/: dune  test.ml  test_reachability.ml  test_three_stack_reachability.ml
