opam-version: "2.0"
name: "lcl_reachability"
version: "0.0.1"
synopsis: "Implementation of LCL reachability algorithm for graph closure"
maintainer: "Ayaka Yorihiro <ayorihi1@swarthmore.edu>"
authors: [ "Ayaka Yorihiro <ayorihi1@swarthmore.edu>" ]
license: "Apache"
homepage: ""
dev-repo: ""
bug-reports: ""
build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.04.0"}
  "batteries"
  "dune" {build & >= "1.0"}
  "jhupllib" {>= "0.1.1"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "3.2"}
]
