(library
  (name lcl_reachability)
  (public_name lcl_reachability.reachability)
  (synopsis "Implementation of LCL reachability algorithm for graph closure")
  (libraries
    batteries
    jhupllib
    monadlib
    lcl_reachability.ast
  )
  (preprocess
    (pps
      ppx_deriving.std
      ocaml-monadic
    )
  )
)
