(alias
  (name runtest)
  (deps test.exe)
  (action (run ./test.exe))
)

(executable
  (name test)
  (libraries
    oUnit
    ppx_deriving_yojson.runtime
    lcl_reachability
    lcl_reachability.test_lib
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_deriving_yojson
    )
  )
  (flags (:standard (-w -39)))
)
